force-app/main/default/objects/Form_Picklist_Phrase__c/Form_Picklist_Phrase__c.object-meta.xml
<CustomObject>
    <description>Represents a phrase that is one of the options on the given picklist</description>
    <label>Form Picklist Phrase</label>
    <nameField>
        <label>Form Picklist Phrase Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Form Picklist Phrases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>