force-app/main/default/objects/Form_Picklist_Phrase__c/fields/Form_Phrase__c.field-meta.xml
<CustomField>
    <fullName>Form_Phrase__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The phrase linked to this picklist phrase</description>
    <inlineHelpText>The phrase linked to this picklist phrase</inlineHelpText>
    <label>Form Phrase</label>
    <referenceTo>Form_Phrase__c</referenceTo>
    <relationshipLabel>Form Picklist Phrases</relationshipLabel>
    <relationshipName>Form_Picklist_Phrases</relationshipName>
    <type>Lookup</type>
</CustomField>