force-app/main/default/objects/Form_Picklist_Phrase__c/fields/Form_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Form_Picklist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The picklist to which this picklist phrase belongs</description>
    <inlineHelpText>The picklist to which this picklist phrase belongs</inlineHelpText>
    <label>Form Picklist</label>
    <referenceTo>Form_Picklist__c</referenceTo>
    <relationshipLabel>Form Picklist Phrases</relationshipLabel>
    <relationshipName>Form_Picklist_Phrases</relationshipName>
    <type>Lookup</type>
</CustomField>