force-app/main/default/objects/Form_Picklist_Phrase__c/fields/Sort_number__c.field-meta.xml
<CustomField>
    <fullName>Sort_number__c</fullName>
    <description>Determines the sort order for this option within its picklist</description>
    <inlineHelpText>Determines the sort order for this option within its picklist</inlineHelpText>
    <label>Sort number</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>